# fastapi

./: .env  README.md  pyproject.toml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 8e6ebcf37b03_create_todos_table.py  e80b7ec22594_create_user_table.py
tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
